--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,7 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --hearthstone-primary: oklch(0.2202 0.0157 256.82);
 }
 
 .dark {
@@ -75,6 +76,7 @@
 }
 
 @theme inline {
+  --color-hearthstone:var(--hearthstone-primary);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-card: var(--card);
